--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -15,8 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto main-nav align-items-center">
         <li class="nav-item">
-          <!-- link_toを使って修正してください -->
-          <a class="nav-link" href="#">ログイン</a>
+          <%= link_to "ログイン", login_path %>
         </li>
       </ul>
     </div>
