--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -36,12 +36,11 @@
             <img class='rounded-circle mr15' src='sample.jpg' width='40' height='40' />
           </a>
           <div class='dropdown-menu dropdown-menu-end'>
-            <div class='dropdown-item'>らんてっく たろう</div>
+            <div class='dropdown-item'><%= current_user.name %></div>
             <div class='dropdown-divider'></div>
             <!-- link_toを使う形に修正してください -->
-            <a class='dropdown-item' href='#'>プロフィール</a>
-            <!-- link_toを使う形に修正してください -->
-            <a class='dropdown-item' href='#'>ログアウト</a>
+            <a class='dropdown-item' href='#'>駆り立てた言葉</a>
+            <%= link_to "ログアウト", logout_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
           </div>
         </li>
       </ul>
