dart-sassのアンイントールとrender.yamlの書き直し

--- a/app/views/pages/introduction.html.erb
+++ b/app/views/pages/introduction.html.erb
@@ -5,8 +5,6 @@
 
 <h2>どうやって遊ぶ？</h2>
 
-遊び方は簡単、
-こちらで作ったフォーマットに沿って自分の好きな言葉を入力するだけ。
 
 
 <h2>アカウントを作ってさらなる高みへ</h2>
@@ -18,4 +16,4 @@
 
 
 <%= link_to "名無しで駆り立てる", "#" %>
-<%= link_to "名前を明かして駆り立てる", "#" %>
+<%= link_to "名前を明かして駆り立てる（アカウント必要）", "#" %>
