--- a/app/views/pages/introduction.html.erb
+++ b/app/views/pages/introduction.html.erb
@@ -5,15 +5,22 @@
 
 <h2>どうやって遊ぶ？</h2>
 
+下のリンクを押すと、”あの某人気漫画のプロローグ”が表示されます。<br />
+全2種類
 
+<div>現在実装中</div>
 
 <h2>アカウントを作ってさらなる高みへ</h2>
-このアプリはログインなしでも遊べますが、アカウントを作ると出来ることがあります。
-”好きな名前を入れられる”
-”自分の残した言葉が残り、名言リストに自分の言葉が表示される”
-
-
-
-
-<%= link_to "名無しで駆り立てる", "#" %>
-<%= link_to "名前を明かして駆り立てる（アカウント必要）", "#" %>
+このアプリはログインなしでも遊べますが、アカウントを作ると別モードでのプレイが可能に。<br />
+<div>
+<h3>”あのプロローグを作る事が出来る”</h3>
+あなたは”全世界を震撼させた”現場に立ち会うことになります。<br />
+あなたもぜひ”語り手”となってみましょう。
+</div>
+<div>
+<h3>”作ったプロローグが残る”</h3>
+<div>
+あなたが刻んだ言葉がデータに残ります。<br />
+シチュエーションは自由。（※文字数制限にご注意下さい）<br />
+</div>
+<%= link_to "言葉を刻む（アカウント必要）", new_agitator_path %>
