言葉一覧と言葉詳細を追加、画像も追加

--- a/app/views/pages/introduction.html.erb
+++ b/app/views/pages/introduction.html.erb
@@ -1,4 +1,4 @@
-<h1>このアプリは？</h1>
+<h2>このアプリは？</h2>
 
 「富、名声、力……」から始まる某人気漫画のパロディミニアプリです。
 
@@ -17,10 +17,16 @@
 あなたは”全世界を震撼させた”現場に立ち会うことになります。<br />
 あなたもぜひ”語り手”となってみましょう。
 </div>
+
 <div>
 <h3>”作ったプロローグが残る”</h3>
 <div>
 あなたが刻んだ言葉がデータに残ります。<br />
 シチュエーションは自由。（※文字数制限にご注意下さい）<br />
 </div>
-<%= link_to "言葉を刻む（アカウント必要）", new_agitator_path %>
+<div>
+  <%= link_to "言葉を刻む（アカウント必要）", new_agitator_path %>
+</div>
+<div>
+  <%= link_to "タイトルへ戻る", root_path %>
+</div>
