--- a/app/views/pages/record_word.html.erb
+++ b/app/views/pages/record_word.html.erb
@@ -1,7 +1,14 @@
 
 
 新たな言葉が刻まれました。
-<p>クソお世話になりました！</p>
+<p>遊んでくれて……ありがとう!!!</p>
 
-<%= link_to "もう一度遊ぶ", new_agitator_path %>
-<%= link_to "他の刻まれた言葉を見る", # >
+<div>
+  <%= link_to "もう一度遊ぶ", new_agitator_path %>
+</div>
+<div>
+  <%= link_to "他の刻まれた言葉を見る", agitators_path %>
+</div>
+<div>
+  <%= link_to "タイトルへ戻る", root_path %>
+</div>
