--- a/app/views/staticpages/top.html.erb
+++ b/app/views/staticpages/top.html.erb
@@ -1,3 +1,6 @@
-<h1>Staticpages#top</h1>
-<p>hello world</p>
-<%= link_to "始める", introduction_path %>
+<h1>富・名声・力</h1>
+<div style="text-align: center;">
+  <%= image_tag 'free_ocean.jpg' %><br />
+  <%= link_to "遊んでみる", introduction_path %>
+</div>
+
