--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,35 +1,13 @@
 <header>
-  <nav class='navbar navbar-expand-lg navigation navbar-light bg-light'>
-    <a class='navbar-brand' href='/'>
-    </a>
-    </a>
-    <button class='navbar-toggler' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent'
-      aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
-      <span class='navbar-toggler-icon'></span>
-    </button>
 
-    <div class='collapse navbar-collapse' id='navbarSupportedContent'>
-      <ul class='navbar-nav ms-auto main-nav align-items-center'>
-        
 
-        <li class='nav-item'>
-          <!-- link_toを使う形に修正してください -->
-          <a class='nav-link' href='#'>ブックマーク一覧</a>
-        </li>
-
-        <li class='nav-item dropdown dropdown-slide'>
-          <!-- link_toを使う形に修正してくださいdata属性、area属性の書き方は次の通りです。-->
-          <!-- data: { bs_toggle: 'dropdown' }, aria: { haspopup: 'true', expanded: 'false' } -->
+       
           
           <div class='dropdown-menu dropdown-menu-end'>
             <div class='dropdown-item'><%= current_user.name %></div>
             <div class='dropdown-divider'></div>
-            <!-- link_toを使う形に修正してください -->
-            <a class='dropdown-item' href='#'>駆り立てた言葉</a>
-            <%= link_to "ログアウト", logout_path, class: 'dropdown-item', data: { turbo_method: :delete } %>
+            <%= link_to "刻まれた言葉", agitators_path %>
+            <%= link_to "ログアウト", logout_path,  data: { turbo_method: :delete } %>
           </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
+
 </header>
