Xの共有リンクを書いた

--- a/app/views/agitators/new.html.erb
+++ b/app/views/agitators/new.html.erb
@@ -34,4 +34,8 @@
 <br />
   <%= f.submit "言葉を刻む", class: "btn btn-primary", data: { confirm: "言葉は取り消せませんが宜しいですか？" } %>
 <% end %>
-
+</div>
+<br />
+<div>
+  <%= link_to "アプリの説明ページに戻る", introduction_path %>
+</div>
