--- a/app/views/pages/introduction.html.erb
+++ b/app/views/pages/introduction.html.erb
@@ -18,6 +18,8 @@
 あなたもぜひ”語り手”となってみましょう。
 </div>
 
+<%= link_to "Xで共有する", "https://twitter.com/share?url=#{URI.encode_www_form_component(root_url)}&text=#{URI.encode_www_form_component("新たな言葉が刻まれた。あなたも続こう。")}&hashtags=#{URI.encode_www_form_component("ミニアプリweek,トミメイセイ")}", target: '_blank' %>
+
 <div>
 <h3>”作ったプロローグが残る”</h3>
 <div>
@@ -27,6 +29,11 @@
 <div>
   <%= link_to "言葉を刻む（アカウント必要）", new_agitator_path %>
 </div>
+<br />
+<div>
+<%= link_to "どんな言葉が刻まれているか見てみる", agitators_path %>
+</div>
+<br />
 <div>
   <%= link_to "タイトルへ戻る", root_path %>
 </div>
