--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,13 +1,7 @@
 <header>
-
-
-       
-          
-          <div class='dropdown-menu dropdown-menu-end'>
-            <div class='dropdown-item'><%= current_user.name %></div>
-            <div class='dropdown-divider'></div>
-            <%= link_to "刻まれた言葉", agitators_path %>
-            <%= link_to "ログアウト", logout_path,  data: { turbo_method: :delete } %>
-          </div>
+<div>
+  <%= link_to "刻まれた言葉", agitators_path %>
+  <%= link_to "ログアウト", logout_path,  data: { turbo_method: :delete } %>
+</div>
 
 </header>
