--- a/app/views/agitators/index.html.erb
+++ b/app/views/agitators/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, '刻まれた言葉') %>
 <h2>刻まれた言葉</h2>
 
 <div>
@@ -8,5 +9,6 @@
 <% end %>
 </div>
 <br />
-<div>
+<div class="btn">
   <%= link_to "タイトルに戻る", root_path %>
+</div>
