--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,5 +1,9 @@
 <header>
-  <div>
-    <%= link_to "ログイン", login_path %>
-  </div>
+  <h1><%= link_to "富・名声・力", root_path %></h1>
+  <nav class-"pc-nav">
+    <ul>
+      <li><%= link_to "刻まれた言葉", agitators_path %></li>
+      <li><%= link_to "ログイン", login_path %></li>
+    </ul>
+  </nav>
 </header>
