--- a/app/views/staticpages/top.html.erb
+++ b/app/views/staticpages/top.html.erb
@@ -1,6 +1,8 @@
-<h1>富・名声・力</h1>
+<% content_for(:title, 'トップ') %>
 <div style="text-align: center;">
   <%= image_tag 'free_ocean.jpg' %><br />
-  <%= link_to "遊んでみる", introduction_path %>
+  <div class="btn">
+    <%= link_to "遊んでみる", introduction_path %>
+  </div>
 </div>
 
