--- a/app/views/agitators/show.html.erb
+++ b/app/views/agitators/show.html.erb
@@ -1,13 +1,15 @@
+<% content_for(:title, @agitator.three_things) %>
 <h2>詳細</h2>
 
-<div>
+<div class="form-group">
   No.<%= @agitator.id %>
 </div>
-<div>
+<div class="form-group">
   記録者：<%= @agitator.user.name %>
 </div>
-<div>
+
   <ul>
+  <div class="form-group">
   <li>
   <%= @agitator.three_things %>、この世の全てを手に入れた
   <%= @agitator.gender %>
@@ -22,16 +24,31 @@
   <%= @agitator.what_people_do %>
   </li>
   </ul>
+
   <ul>
+  <div class="form-group">
   <li>
   <%= @agitator.treasure %>か？欲しけりゃくれてやる、探せ！
   <%= @agitator.place %>に置いてきた
   </li>
+  </div>
   </ul>
+
   <ul>
+  <div class="form-group">
+  <li>
   <%= @agitator.where_they_go %>夢を追い続ける。世はまさに
   <%= @agitator.epic_name %>時代！
+  </li>
+  </div>
+  </ul>
 </div>
 
-<%= link_to "Xで共有する", "https://twitter.com/share?url=#{request.url}&text=#{URI.encode_www_form_component("”#{@agitator.common_name}”#{@agitator.name}の言葉に奮い立ちました")}&hashtags=#{URI.encode_www_form_component("ミニアプリ, トミメイセイ")}", target: '_blank' %>
+<div class="form-group">
+<div class="btn-b">
+<%= link_to "Xで共有する", "https://twitter.com/share?url=#{request.url}&text=#{URI.encode_www_form_component("記述者#{@agitator.user.name}：「”#{@agitator.common_name}”#{@agitator.name}の言葉」に奮い立ちました")}&hashtags=#{URI.encode_www_form_component("ミニアプリ, トミメイセイ")}", target: '_blank' %>
+</div>
+</div>
+<div class="btn-b">
 <%= link_to "刻まれた言葉一覧へ", agitators_path %> 
+</div>
