ランダム機能をつけました

--- a/app/views/pages/introduction.html.erb
+++ b/app/views/pages/introduction.html.erb
@@ -7,10 +7,12 @@
 <h2>どうやって遊ぶ？</h2>
 
 <div class-="form-group">
-下のリンクを押すと、”あの某人気漫画のプロローグ”が表示されます。全3種類。
+下のリンクを押すと、”あの某人気漫画のプロローグ”が表示されます。全4種類。
 </div>
 
-<div>現在実装中</div>
+<div class="btn-b">
+  <%= link_to "プロローグ", random_result_path %>
+</div>
 
 <h2>アカウントを作ってさらなる高みへ</h2>
 上記のように、このアプリはログインなしでも遊べますが、アカウントを作ると別モードでのプレイが可能に。
