フラッシュメッセージを表示させました

--- a/app/views/pages/record_word.html.erb
+++ b/app/views/pages/record_word.html.erb
@@ -1,8 +1,8 @@
 <% content_for(:title, '言葉作成完了') %>
 <div class="form-group">
-<h3>新たな言葉が刻まれました。</h3>
+<h3>遊んでくれて……ありがとう!!!</h3>
 
-遊んでくれて……ありがとう!!!
+
 </div>
 
 <div class="btn">
