--- a/app/views/pages/result2.html.erb
+++ b/app/views/pages/result2.html.erb
@@ -1,17 +1,22 @@
-<% content_for(:title, 'ロジャーの言葉2') %>
-<h2>結果(2/3)</h2>
-
-<strong>
+<% content_for(:title, 'ガチャ結果2') %>
+<h2>結果(2/5)</h2>
+<div style="text-align: center;">
 <div class="form-group">
-世界は…そうだ。自由を求め選ぶべき世界が目の前に広々と横たわっている。
-</div>
-終わらぬ夢がお前たちの導き手ならば、越えてゆけ！己が信念の旗のもとに！
+<strong>
+エラーを解消したロロノア・ゾロ
 </strong>
+</div>
+  <%= image_tag 'nihontou_youtou.png' %>
+<div class="form-group">
+<strong>「礼を言う。おれはまだまだ強くなれる」</strong>
+</div>
+
+</div>
 <div class="form-group">
   <div class="btn-b">
-    <%= link_to "Xで共有する", "https://twitter.com/share?url=#{request.url}&text=#{URI.encode_www_form_component("終わらぬ夢がお前たちの導き手ならば、越えてゆけ！己が信念の旗のもとに！")}&hashtags=#{URI.encode_www_form_component("ミニアプリ,トミメイセイ")}", target: '_blank' %>
+    <%= link_to "Xで共有する", "https://twitter.com/share?url=#{request.url}&text=#{URI.encode_www_form_component("エラーを解消したロロノア・ゾロ「礼を言う。おれはまだまだ強くなれる」")}&hashtags=#{URI.encode_www_form_component("ミニアプリweek,トミメイセイ")}", target: '_blank' %>
   </div>
 
   <div class="btn">
-  <%= link_to "イントロダクションへ戻る", introduction_path %>
+  <%= link_to "タイトルへ", root_path %>
   </div>
