--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,21 @@
 <% content_for(:title, 'ユーザー登録') %>
       <h1>ユーザー登録</h1>
       <%= form_with model: @user do |f| %>
+        
         <div class="form-group">
-          <%= f.label :name, "名前", class: "form-label" %>
+          <%= f.label :name, class: "form-label" %>
           <%= f.text_field :name, class: "form-control" %>
         </div>
         <div class="form-group">
-          <%= f.label :email, "Eメール", class: "form-label" %>
+          <%= f.label :email, class: "form-label" %>
           <%= f.email_field :email, class: "form-control" %>
         </div>
         <div class="form-group">
-          <%= f.label :password, "パスワード", class: "form-label" %>
+          <%= f.label :password, class: "form-label" %>
           <%= f.password_field :password, class: "form-control" %>
         </div>
         <div class="form-group">
-          <%= f.label :password_confirmation, "パスワード確認", class: "form-label" %>
+          <%= f.label :password_confirmation, class: "form-label" %>
           <%= f.password_field :password_confirmation, class: "form-control" %>
         </div>
         <%= f.submit "登録", class: "btn btn-primary" %>
