データベースの期限切れにより機能が使えなくなったため、修正を加えました

--- a/app/views/pages/introduction.html.erb
+++ b/app/views/pages/introduction.html.erb
@@ -10,7 +10,7 @@
 当アプリでは2つの遊び方が出来ます。
 </div>
 
-<h3>1. 某人気漫画キャラガチャ（アカウント不要） <font color="fa8072">NEW</font></h3>
+<h3>1. 某人気漫画キャラガチャ（アカウント不要）</h3>
 
 <div class-="form-group">
 下のリンクを押すと、”あの漫画の名言”が表示されます。だがどこか様子がおかしい……？全5種類。
@@ -23,7 +23,7 @@
   <a href="#" id="button">ガチャを引く</a>
 </div>
 
-<h3>2. 某人気漫画プロローグメーカー（アカウント必要）</h3>
+<h3><del>2. 某人気漫画プロローグメーカー（アカウント必要）</del>（現在はデータベース削除のため利用できません）</h3>
 <p>アカウントを作る事で更なる高みへ。</p>
 
 <div class="form-group">
